@@ -4,13 +4,15 @@ import io.perfeccionista.framework.pagefactory.elements.preferences.DefaultSelen
 import io.perfeccionista.framework.pagefactory.elements.preferences.WebPageFactoryPreferences;
 import io.perfeccionista.framework.pagefactory.WebPageServiceConfiguration;
 
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.Set;
 
 public class TestSeleniumWebPageServiceConfiguration implements WebPageServiceConfiguration {
 
     @Override
     public Set<String> getPageObjectPackages() {
-        return Set.of("io.perfeccionista.framework.pagefactory.pageobjects");
+        return new HashSet<>(Arrays.asList("io.perfeccionista.framework.pagefactory.pageobjects"));
     }
 
     @Override
