@@ -2,7 +2,7 @@ package io.perfeccionista.framework.assertions;
 
 import org.jetbrains.annotations.NotNull;
 
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.time.Duration;
 
 import static io.perfeccionista.framework.invocation.runner.InvocationInfo.assertInvocation;
@@ -19,19 +19,19 @@ public class FileAssertions {
     }
 
     public static void fileExists(@NotNull String filePath) {
-        runCheck(assertInvocation(FILE_EXISTS), () -> fileShouldExist(Path.of(filePath)));
+        runCheck(assertInvocation(FILE_EXISTS), () -> fileShouldExist(Paths.get(filePath)));
     }
 
     public static void fileExistsWithTimeout(@NotNull String filePath, @NotNull Duration duration) {
-        runCheck(assertInvocation(FILE_EXISTS), () -> fileShouldExist(Path.of(filePath)), duration);
+        runCheck(assertInvocation(FILE_EXISTS), () -> fileShouldExist(Paths.get(filePath)), duration);
     }
 
     public static void fileMissing(@NotNull String filePath) {
-        runCheck(assertInvocation(FILE_MISSING), () -> fileShouldBeMissing(Path.of(filePath)));
+        runCheck(assertInvocation(FILE_MISSING), () -> fileShouldBeMissing(Paths.get(filePath)));
     }
 
     public static void fileMissingWithTimeout(@NotNull String filePath, @NotNull Duration duration) {
-        runCheck(assertInvocation(FILE_MISSING), () -> fileShouldBeMissing(Path.of(filePath)), duration);
+        runCheck(assertInvocation(FILE_MISSING), () -> fileShouldBeMissing(Paths.get(filePath)), duration);
     }
 
 }
