@@ -8,7 +8,7 @@ import io.perfeccionista.framework.pagefactory.dispatcher.LocalWebBrowserSeleniu
 import io.perfeccionista.framework.pagefactory.dispatcher.type.ChromeType;
 import org.openqa.selenium.chrome.ChromeOptions;
 
-import java.nio.file.Path;
+import java.nio.file.Paths;
 
 import static io.perfeccionista.framework.utils.StringUtils.isNotBlank;
 import static io.perfeccionista.framework.value.Values.stringProcess;
@@ -34,7 +34,7 @@ public class ChromeLocal implements WebBrowserConfiguration {
     }
 
     protected WebBrowserBinaryResolver getWebDriverBinaryResolver() {
-        return WebBrowserBinaryResolver.of(Path.of(stringProcess("${[config] perfeccionista.browser.chrome.webdriver}")));
+        return WebBrowserBinaryResolver.of(Paths.get(stringProcess("${[config] perfeccionista.browser.chrome.webdriver}")));
     }
 
 }
